--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,124 +1,60 @@
-/* Navbar styling */
-body{
-    min-height: 150vh;
-    display: flex;
-    flex-direction: column;
+CSS
+body {
+  margin: 0;
 }
-.navigation{
-    vertical-align: top;
-}
-nav {
-    height: 150px;
-    background-color: #373738;
-  }
-  header li {
-    padding: 5px 10px;
-    list-style: none;
-    color: white;
-    text-align: right;
-    font-size: 30px;
-    } 
-.inline-blockLogo{
-    float: left;
-    height: 10px;
-    border: 2px;
-    width: 10px;
-    text-align: center;
-} 
-.inline-blockLogo img {
-    float: left;
-    width: 120px; 
-    height: 120px; 
-    margin-right: 10px; 
-    padding: 30px;
-}
-.inline-block {
-  display: inline-block;  
+header {
+  background-color: #FCC6D7;
   padding: 15px;
 }
-
-ul {
-    width: 50%;
-    margin-left: auto;
+.logo{
+  height: 8%;
+  width: 5%;
 }
-
-/* Hero image section styling */
-.content{
-    float: left;
-  height: 500px;
-  background-color: white;
-  width: 100%;
+img{
+  height: 10%;
+  width: 50%;
+}
+header ul {
+  float: right;
+  color: white;
+}
+header li {
+  display: inline-block;
+  padding: 0px 5px;
+}
+header p {
+  display: inline-block;
+}
+.hero {
+  background-color: #A59CD3;
+  padding: 100px 15px;
+}
+.content {
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 50px;
+  background-color: #FFFFFF;
   text-align: center;
 }
-
-.heroImg img {
-    float: right;
-    width: 800px; /* Adjust the width as needed */
-    height: auto; /* Maintain aspect ratio */
-    margin-left: 20px; /* Adjust the margin as needed */
-}
-.heroImg h1, .heroImg p {
-    float: left;
+button {
+  padding: 15px;
+  background-color: #7B61F8;
+  color: white;
+  font-size: 15px;
+  border-radius: 4px;
 }
 
-h1{
-    text-align:left;
-    vertical-align:text-top;
-    font-size:80px;
-    font-family:Inter;
-    align-self:flex-start;
-    left:200px;
-    top:150px;
-    position:absolute;
-    line-height:auto;
-    border-style:hidden;
-    outline:none;
-    width:95px;
-    display:flex;
-}
-
-p{
-    text-align:left;
-    vertical-align:text-top;
-    font-size:30px;
-    font-family:Inter;
-    align-self:flex-start;
-    left:200px;
-    top:300px;
-    position:absolute;
-    line-height:auto;
-    border-style:hidden;
-    outline:none;
-    width:600px;
-    display:flex;
-}
-button{
-    vertical-align:text-top;
-    align-self:flex-start;
-    left:200px;
-    top:150px;
-    position:absolute;
-    line-height:auto;
-    border-style:hidden;
-    display:flex;
-}
-/* Footer styling */
-footer{
-    background-color: #373738;
-    padding: 10px;
-    margin-top: auto;
+footer {
+  background-color: #7B61F8;
+  padding: 5px;
+  color: white;
+  margin-top: 90vh;
 }
 footer ul {
-    display: inline-block;
-    vertical-align: top;
-    padding: 0;
+  list-style: none;
+  padding-left: 5px;
 }
 footer li {
-    padding: 5px 10px;
-    list-style: none;
-    color: white;
-    font-size: 30px;
-    } 
-  
-   
-    
+  display: inline-block;
+  padding: 0px 7px;
+}
